[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Menus/Load/minos_loadsreen.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/Menus/Load/load_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/AngerStyles-ywXKY.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Menus/Load/return_to_title.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menus/Load/focus_styleboxflat.tres" type="StyleBox" id=5]
[ext_resource path="res://Scenes/Menus/Load/Save_styleboxflat.tres" type="StyleBox" id=6]
[ext_resource path="res://Scenes/Menus/Main/FadeIn.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Load" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveList" type="GridContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0
size_flags_horizontal = 2
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save0" type="Button" parent="SaveList"]
margin_left = 15.0
margin_right = 375.0
margin_bottom = 60.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
custom_fonts/font = ExtResource( 2 )
text = "1 - Limbo"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save1" type="Button" parent="SaveList"]
margin_left = 409.0
margin_right = 769.0
margin_bottom = 60.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "2 - Luxúria"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save2" type="Button" parent="SaveList"]
margin_left = 15.0
margin_top = 64.0
margin_right = 375.0
margin_bottom = 124.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "3 - Gula"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save3" type="Button" parent="SaveList"]
margin_left = 409.0
margin_top = 64.0
margin_right = 769.0
margin_bottom = 124.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.12247
margin_top = 1.12244
margin_right = -1.12244
margin_bottom = 1.12244
custom_fonts/font = ExtResource( 2 )
text = "4 - Ganância"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save4" type="Button" parent="SaveList"]
margin_left = 15.0
margin_top = 128.0
margin_right = 375.0
margin_bottom = 188.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_colors/font_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save4"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.943878
margin_right = -0.943878
custom_fonts/font = ExtResource( 2 )
text = "5 - Ira"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save5" type="Button" parent="SaveList"]
margin_left = 409.0
margin_top = 128.0
margin_right = 769.0
margin_bottom = 188.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 2 )
text = "6 - Heresia"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save6" type="Button" parent="SaveList"]
margin_left = 15.0
margin_top = 192.0
margin_right = 375.0
margin_bottom = 252.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save6"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.943909
margin_right = 0.943909
custom_fonts/font = ExtResource( 2 )
text = "7 - Violencia"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save7" type="Button" parent="SaveList"]
margin_left = 409.0
margin_top = 192.0
margin_right = 769.0
margin_bottom = 252.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save7"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.12247
margin_top = 1.12244
margin_right = -1.12244
margin_bottom = 1.12244
custom_fonts/font = ExtResource( 2 )
text = "8 - Fraude"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save8" type="Button" parent="SaveList"]
margin_left = 15.0
margin_top = 256.0
margin_right = 375.0
margin_bottom = 316.0
rect_min_size = Vector2( 360, 60 )
size_flags_horizontal = 6
custom_styles/hover = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_constants/hseparation = 20

[node name="Label" type="Label" parent="SaveList/Save8"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.12247
margin_top = 1.12244
margin_right = -1.12244
margin_bottom = 1.12244
custom_fonts/font = ExtResource( 2 )
text = "9 - Traição"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
margin_left = 304.298
margin_top = 476.57
margin_right = 724.298
margin_bottom = 526.57
rect_min_size = Vector2( 100, 50 )
mouse_default_cursor_shape = 2
custom_styles/focus = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Voltar"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/fade_in = SubResource( 2 )

[connection signal="pressed" from="SaveList/Save0" to="." method="_on_Save0_pressed"]
[connection signal="pressed" from="SaveList/Save1" to="." method="_on_Save1_pressed"]
[connection signal="pressed" from="SaveList/Save2" to="." method="_on_Save2_pressed"]
[connection signal="pressed" from="SaveList/Save3" to="." method="_on_Save3_pressed"]
[connection signal="pressed" from="SaveList/Save4" to="." method="_on_Save4_pressed"]
[connection signal="pressed" from="SaveList/Save5" to="." method="_on_Save5_pressed"]
[connection signal="pressed" from="SaveList/Save6" to="." method="_on_Save6_pressed"]
[connection signal="pressed" from="SaveList/Save7" to="." method="_on_Save7_pressed"]
[connection signal="pressed" from="SaveList/Save8" to="." method="_on_Save8_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="FadeIn" method="_on_AnimationPlayer_animation_finished"]
